# refact-global-hse

./: .ghci  CPP.hs  Clean.hs  Decls.hs  Fold.hs  FoldM.hs  GHC.hs  Graph.hs  HashDefine.hs  IO.hs  Imports.hs  LoadModule.hs  Main.hs  ModuleInfo.hs  ModuleKey.hs  MoveSpec.hs  Names.hs  README.md  Scan.hs  SrcLoc.hs  Symbols.hs  TODO  Tests.hs  Tmp.hs  Types.hs  Utils.hs  decl-mover.cabal  refact-global-hse.cabal
old/: FoldM.hs
scripts/: Clean.hs  CleanImports.hs  Decorate.hs  Main.hs  Move.hs  MoveDecls.hs  OldMove.hs  ParseModule.hs  Tests.hs
src/: CPP.hs  Clean.hs  Decls.hs  HashDefine.hs  Imports.hs  LoadModule.hs  MoveSpec.hs  Refactor.hs  ScanM.hs  SrcLoc.hs  Utils.hs
src/Refactor/: CPP.hs  Clean.hs  Decls.hs  FGL.hs  Graph.hs  HashDefine.hs  Imports.hs  LoadModule.hs  ModuleInfo.hs  ModuleKey.hs  MoveSpec.hs  Names.hs  ScanM.hs  SrcLoc.hs  SrcSpan.hs  Utils.hs
src/System/FilePath/: Find.hs  Glob.hs  GlobPattern.hs
tests/: DeclTests.hs  ImportTests.hs  Tests.hs
tests/expected/decl1/Data/Logic/ATP/: DP.hs  FOL.hs  Lib.hs  Resolution.hs  Tableaux.hs
tests/expected/decl2/: Decls.hs  IO.hs  Main.hs  SrcLoc.hs  Tmp.hs  Types.hs  Utils.hs
tests/expected/decl3/: Decls.hs  IO.hs  ScanM.hs  SrcLoc.hs  Tmp.hs  Utils.hs
tests/expected/decl4/: CPP.hs  Decls.hs  IO.hs  Main.hs  SrcLoc.hs  Symbols.hs  Tmp.hs  Types.hs  Utils.hs
tests/expected/decl5/: Clean.hs  Decls.hs  Imports.hs  Main.hs  ModuleKey.hs  Types.hs
tests/expected/decl6/: Decls.hs  MoveSpec.hs  Utils.hs
tests/expected/decl7/: CPP.hs  Decls.hs  Imports.hs  ModuleKey.hs  MoveSpec.hs  SrcLoc.hs  Symbols.hs
tests/expected/decl7/scripts/: Move.hs  OldMove.hs  ParseModule.hs
tests/expected/decl8/: Imports.hs  SrcLoc.hs  Symbols.hs  Utils.hs
tests/expected/decl9/: Decls.hs  Graph.hs  Imports.hs  LoadModule.hs  ModuleInfo.hs  Names.hs  Scan.hs  Utils.hs
tests/expected/decl9/tests/: DeclTests.hs  Tests.hs
tests/expected/simple1/: A.hs  B.hs
tests/expected/simple2/: D.hs
tests/expected/simple3/: C.hs  D.hs
tests/expected/simple4/: M1.hs  M2.hs  M3.hs
tests/expected/simple5/: M1.hs  M3.hs
tests/input/: If.hs
tests/input/Data/Logic/ATP/: FOL.hs
tests/input/atp-haskell/Data/Logic/ATP/: Lib.hs  Tableaux.hs
tests/input/cpp/: A.hs
tests/input/decl-mover/: Decls.hs  Graph.hs  IO.hs  Imports.hs  ScanM.hs  SrcLoc.hs  Utils.hs
tests/input/rgh/: CPP.hs  Decls.hs  GHC.hs  Imports.hs  Utils.hs
tests/input/rgh/scripts/: Decorate.hs  Move.hs
tests/input/rgh/tests/: Tests.hs
tests/input/simple/: A.hs
tests/input/simple2/: C.hs
tests/input/simple3/: C.hs
tests/input/simple4/: M1.hs  M2.hs  M3.hs
tests/input/simple5/: M2.hs
