Name: refact-global-hse
Version: 1.0
Synopsis: Identity transformations on sets of Haskell modules
Description: Move declarations between modules, clean up import lists
Homepage: https://github.com/ddssff/refact-global-hse
License: BSD3
Author: David Fox
Maintainer: David Fox
Cabal-Version: >= 1.9
Build-Type: Simple

Library
  Build-Depends:
    base,
    containers,
    cpphs,
    data-default,
    directory,
    filemanip > 0.3.6.3,
    filemanip-extra,
    filepath,
    haskell-names,
    haskell-src-exts >= 1.18,
    lens,
    lifted-base,
    monad-control,
    mtl,
    optparse-applicative,
    pretty,
    process,
    syb,
    temporary
  Exposed-Modules:
    Clean
    CPP
    Decls
    Graph
    HashDefine
    Imports
    LoadModule
    ModuleKey
    ModuleInfo
    MoveSpec
    Names
    SrcLoc
    Utils
  GHC-options: -Wall -O2

executable refactor
  Hs-Source-Dirs: scripts
  Main-Is: Main.hs
  Build-Depends:
    base,
    containers,
    data-default,
    directory,
    filemanip > 0.3.6.3,
    filepath,
    haskell-names,
    haskell-src-exts,
    HUnit,
    lens,
    optparse-applicative,
    optparse-generic,
    mtl,
    refact-global-hse,
    syb,
    utility-ht

Test-Suite refact-global-hse-tests
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: tests
  Main-Is: Tests.hs
  Build-Depends:
    base,
    containers,
    cpphs,
    data-default,
    filepath,
    filemanip > 0.3.6.3,
    haskell-names,
    haskell-src-exts,
    HUnit,
    lens,
    mtl,
    process,
    refact-global-hse,
    syb
  GHC-options: -Wall -O2
