Name: refact-global-hse
Version: 1.0
Synopsis: Identity transformations on sets of Haskell modules
Description: Move declarations between modules, clean up import lists
Homepage: https://github.com/ddssff/refact-global-hse
License: BSD3
Author: David Fox
Maintainer: David Fox
Cabal-Version: >= 1.9
Build-Type: Simple

flag filemanip0364
  Description: forthcoming(?) filemanip-0.3.6.4 has a required bug fix
  Default: False

Library
  Hs-Source-Dirs: src
  Build-Depends:
    base,
    containers,
    cpphs,
    data-default,
    directory,
    filemanip-extra,
    filepath,
    haskell-names,
    haskell-src-exts >= 1.18,
    hse-cpp,
    HUnit,
    lens,
    lifted-base,
    monad-control,
    mtl,
    optparse-applicative,
    pretty,
    process,
    syb,
    temporary
  Exposed-Modules:
    Clean
    CPP
    Decls
    Graph
    HashDefine
    Imports
    LoadModule
    ModuleKey
    ModuleInfo
    MoveSpec
    Names
    ScanM
    SrcLoc
    Utils
  GHC-options: -Wall -O2
  if flag(filemanip0364)
    Build-Depends: filemanip > 0.3.6.3
  else
    Build-Depends: unix-compat
    Exposed-Modules: System.FilePath.Find, System.FilePath.Glob, System.FilePath.GlobPattern

executable refactor
  Hs-Source-Dirs: scripts
  Main-Is: Main.hs
  Build-Depends:
    base,
    containers,
    data-default,
    directory,
    filepath,
    haskell-names,
    haskell-src-exts,
    HUnit,
    lens,
    optparse-applicative,
    mtl,
    refact-global-hse,
    syb,
    utility-ht
  if flag(filemanip0364)
    Build-Depends: filemanip > 0.3.6.3
  else
    Build-Depends: unix-compat

Test-Suite refactor-tests
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: tests
  Main-Is: Tests.hs
  Build-Depends:
    base,
    containers,
    cpphs,
    data-default,
    filepath,
    haskell-names,
    haskell-src-exts,
    HUnit,
    lens,
    mtl,
    process,
    refact-global-hse,
    syb
  GHC-options: -Wall -O2
  if flag(filemanip0364)
    Build-Depends: filemanip > 0.3.6.3
  else
    Build-Depends: unix-compat
