Name: refact-global-hse
Version: 1.0
Synopsis: Identity transformations on sets of Haskell modules
Description: Move declarations between modules, clean up import lists
Homepage: https://github.com/ddssff/refact-global-hse
License: BSD3
Author: David Fox
Maintainer: David Fox
Cabal-Version: >= 1.9
Build-Type: Simple

flag filemanip0364
  Description: forthcoming(?) filemanip-0.3.6.4 has a required bug fix
  Default: False

flag local-cpphs
  Default: False
  Manual: True

Library
  Hs-Source-Dirs: src
  Build-Depends:
    base,
    Cabal,
    containers,
    data-default,
    directory,
    filemanip-extra,
    filepath,
    haskell-names,
    haskell-src-exts >= 1.18,
    hse-cpp,
    HUnit,
    lens,
    lifted-base,
    monad-control,
    mtl,
    optparse-applicative,
    pretty,
    process,
    syb,
    temporary
  Exposed-Modules:
    Refactor
  Other-Modules:
    Refactor.Clean
    Refactor.CPP
    Refactor.Decls
    Refactor.Graph
    Refactor.HashDefine
    Refactor.Imports
    Refactor.LoadModule
    Refactor.ModuleKey
    Refactor.ModuleInfo
    Refactor.MoveSpec
    Refactor.Names
    Refactor.ScanM
    Refactor.SrcLoc
    Refactor.Utils
  GHC-options: -Wall -O2
  if flag(filemanip0364)
    Build-Depends: filemanip > 0.3.6.3
  else
    Build-Depends: unix-compat
    Exposed-Modules: System.FilePath.Find, System.FilePath.Glob, System.FilePath.GlobPattern
  if flag(local-cpphs)
    Exposed-Modules:
      Language.Preprocessor.Cpphs.Options
      Language.Preprocessor.Cpphs.Tokenise
      Language.Preprocessor.Cpphs.RunCpphs
      Language.Preprocessor.Cpphs.ReadFirst
      Language.Preprocessor.Cpphs.SymTab
      Language.Preprocessor.Cpphs.MacroPass
      Language.Preprocessor.Cpphs.Position
      Language.Preprocessor.Cpphs.HashDefine
      Language.Preprocessor.Cpphs.CppIfdef
      Language.Preprocessor.Unlit
      Language.Preprocessor.Cpphs
    Build-Depends: old-time, old-locale, polyparse>=1.9
    Hs-Source-Dirs: ../cpphs-1.20.2
  else
    Build-Depends: cpphs

executable refactor
  Hs-Source-Dirs: scripts
  Main-Is: Main.hs
  Build-Depends:
    base,
    containers,
    cpphs,
    data-default,
    directory,
    filepath,
    haskell-names,
    haskell-src-exts,
    HUnit,
    lens,
    optparse-applicative,
    mtl,
    refact-global-hse,
    syb,
    utility-ht
  if flag(filemanip0364)
    Build-Depends: filemanip > 0.3.6.3
  else
    Build-Depends: unix-compat

Test-Suite refactor-tests
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: tests
  Main-Is: Tests.hs
  Build-Depends:
    base,
    Cabal,
    containers,
    data-default,
    filepath,
    haskell-names,
    haskell-src-exts,
    HUnit,
    lens,
    mtl,
    process,
    refact-global-hse,
    syb
  GHC-options: -Wall -O2
  if flag(filemanip0364)
    Build-Depends: filemanip > 0.3.6.3
  else
    Build-Depends: unix-compat
  if !flag (local-cpphs)
    Build-Depends: cpphs
